<resources>
    <!-- GLOBAL -->
    <string name="app_name">222 Player</string>
    <string name="ok1">OK</string>
    <string name="yes1">Yes</string>
    <string name="no1">No</string>
    <string-array name="size">
        <item>Bytes</item>
        <item>KB</item>
        <item>MB</item>
        <item>GB</item>
    </string-array>
    <string name="visit">Visit</string>

    <!-- Main -->
    <string name="noPermWES">The app has no access to the external storage.</string>
    <string name="tbAboutUs">About Us</string>
    <string name="tbSettings">App Settings</string>
    <string name="tbSubtitle">Add Subtitle(s)</string>
    <string name="aboutUs">Follow us on Instagram: @fulcrum1378</string>
    <string name="toExit">Double tap to exit&#8230;</string>
    <string name="accessStorage">The app needs to access the external storage.</string>
    <string name="endOfPlaylist">End of the playlist!</string>
    <string name="startOfPlaylist">Beginning of the playlist!</string>
    <string name="audioPlayer">Media Player</string>
    <string name="musicInfoTitle">File Properties</string>
    <string name="mNormalDur">00:00 / 00:00</string>
    <string name="unreadable">Unable to read the selected file!</string>
    <string name="onExitWhilePlaying">Do you really want to close the app? You can minimize the app so it can keep playing in the background&#8230;</string>
    <string name="onExitWhileVPlaying">Do you really want to close the app?</string>
    <string name="errorOccurred">Unfortunately an error occurred!</string>
    <string name="shuffleOn">Shuffle</string>
    <string name="shuffleOff">No Shuffling</string>
    <string name="noRepeat">No Repeat</string>
    <string name="repeatAll">Repeat All</string>
    <string name="repeatOnce">Repeat Once</string>
    <string-array name="crop">
        <item>Real</item>
        <item>Fit</item>
        <item>Stretch</item>
        <item>Crop</item>
    </string-array>
    <string-array name="fileInfoList">
        <item>Type</item>
        <item>Path</item>
        <item>Size</item>
        <item>Title</item>
        <item>Album</item>
        <item>Artist</item>
        <item>Length</item>
        <item>Last Modified</item>
    </string-array>
    <string-array name="plInfoList">
        <item>Number of Items</item>
        <item>Date Modified</item>
        <item>Date Created</item>
        <item>Description</item>
    </string-array>
    <string name="deleteFileT">Delete File</string>
    <string name="deleteFile">Are you sure you want to delete this file?\n\n</string>
    <string name="deletePlaying">\n\nTHIS FILE IS BEING PLAYED RIGHT NOW!!!</string>
    <string name="deleteMass">Are you sure you want to delete all these files?</string>
    <string name="couldntDelete">Could not delete the selected file!</string>
    <string name="couldntDeleteSome">Could not delete some of the selected files!</string>
    <string name="couldntRename">Could not rename the selected file!</string>
    <string name="suchFileExists">There\'s another file in the storage with such address!</string>
    <string name="myInsta">https://www.instagram.com/fulcrum1378/</string>
    <string name="audios">Audios</string>
    <string name="videos">Videos</string>
    <string name="items">Items</string>
    <string name="couldNotGainAudioFocus">Could not gain audio focus.</string>
    <string name="mpNotSeekable">Seeking is not possible.</string>
    <string name="cannotOpenFile">Cannot open this file.</string>
    <string name="unknownErrorOccurred">Unfortunately an unknown error occurred!</string>
    <string name="mpUnreadable">File is not readable.</string>
    <string name="mpUnsupported">File is readable, but the device doesn\'t support such its type.</string>
    <string name="mpTimedOut">Opening the file took more than usual time!</string>
    <string name="lowSystemLevel">Low-level system!</string>
    <string name="badInterleaving">This file is improperly interleaved; it may cause errors while playing.</string>
    <string name="vpTrackLagging">This video is too complex and possibly only the audio will be played fine.</string>
    <string name="vpUnsupportedST">This subtitle is not supported.</string>
    <string name="vpSTTimedOut">Could not load the subtitle!</string>
    <string name="mMAudAddToPL">Add To Playlist</string>
    <string name="mMAudDlt">Delete</string>
    <string name="mMAudProp">Properties</string>
    <string name="mMPliRemove">Remove from Playlist</string>
    <string name="mMPliDelete">Delete File</string>
    <string name="mSlctAdd">Add All To Playlist</string>
    <string name="mSlctDlt">Delete All</string>
    <string name="mSlctMark">Mark All</string>
    <string name="mSlctUnmark">Unmark All</string>
    <string name="mSlctClose">Close</string>
    <string name="mNavTAudios">Audios</string>
    <string name="mNavTVideos">Videos</string>
    <string name="mNavTPlaylists">Playlists</string>
    <string name="mNavTSettings">Playback Settings</string>
    <string name="mPLExists">This audio already exists in this playlist!</string>
    <string name="mBM1PLEditor">Edit Playlists</string>
    <string name="mBM1PLDel">Are you sure you want to delete this playlist with all its items?</string>
    <string name="mBM1PLDelMass">Are you sure you want to delete all these playlists with their items?</string>
    <string name="mBM1PLItemDelMass">Are you sure you want to delete all these playlist items?</string>
    <string name="fileNotFound">The file wasn\'t found in the storage!</string>
    <string name="mNewPL">New Playlist&#8230;</string>
    <string name="plExists">Another playlist with this name already exists!</string>
    <string name="noPlaylists">There are no playlists.</string>
    <string name="mGetST">Select a subtitle&#8230;</string>
    <string name="unsupportedST">Unfortunately, this subtitle is not supported!</string>
    <string name="plInfoTitle">Playlist Properties</string>
    <string name="typeSomething">Type something&#8230;</string>
    <string name="notExists">This file does not exist!</string>
    <string name="nItemsSelected">Item(s) Selected</string>
    <string name="discardChanges">Are you sure you want to discard all changes you\'ve made already?</string>

    <!-- display_settings.xml -->
    <string name="mDSEq">Equalizer</string>
    <string name="mDSVr">Surround Sound</string>
    <string name="mDSBB">Bass</string>
    <string name="mDSPR">Playback Mode</string>
    <string-array name="rvPresets">
        <item>None</item>
        <item>Plate</item>
        <item>Small Room</item>
        <item>Medium Room</item>
        <item>Large Room</item>
        <item>Medium Hall</item>
        <item>Large Hall</item>
    </string-array>
    <string-array name="eqModes">
        <item>Default</item>
        <item>Rock</item>
        <item>Rap</item>
        <item>Grunge</item>
        <item>Metal</item>
        <item>Dance</item>
        <item>Techno</item>
        <item>Country</item>
        <item>Jazz</item>
        <item>Acoustic</item>
        <item>Folk</item>
        <item>New Age</item>
        <item>Classical</item>
        <item>Blues</item>
        <item>Oldies</item>
        <item>Reggae</item>
        <item>Opera</item>
        <item>Swing</item>
        <item>Speech</item>
        <item>Music 56K</item>
        <item>Music 28K</item>
        <item>Custom</item>
    </string-array>
    <string name="mDSLE">Volume Boost</string>
    <string name="mDSPBS">Playback Speed</string>
    <string name="mDSPBP">Sound Pitch</string>
    <string name="mDSVS">Video Size</string>

    <!-- Settings -->
    <string name="sWallpaper">Wallpapers</string>
    <string name="sAtLeastOneWP">At least one picture must be selected.</string>
    <string name="selectAPic">Select a picture&#8230;</string>
    <string name="sColorPrimaries">Theme</string>
    <string name="sCP1">Colour A (most icons and texts):</string>
    <string name="sCP2">Colour B (most background colours):</string>
    <string name="sCPDefault">Default</string>
    <string name="sArrangement">List Arrangement</string>
    <string name="sFArrangement">Folders:</string>
    <string name="sMArrangement">Audio/Video:</string>
    <string name="sPArrangement">Playlists:</string>
    <string-array name="sFRadios">
        <item>Name</item>
        <item>Number of files</item>
        <item>Size</item>
        <item>Storage</item>
        <item>Date modified</item>
    </string-array>
    <string-array name="sMRadios">
        <item>File name</item>
        <item>Title</item>
        <item>Size</item>
        <item>Length</item>
        <item>Album</item>
        <item>Artist</item>
        <item>Type</item>
        <item>Date modified</item>
    </string-array>
    <string-array name="sPRadios">
        <item>Name</item>
        <item>Number of items</item>
        <item>Date modified</item>
        <item>Date created</item>
    </string-array>
    <string name="sArngAsc">Ascending</string>
    <string name="sArngDsc">Descending</string>
    <string name="sFont">Font</string>
    <string-array name="sFonts">
        <item>casual</item>
        <item>cursive</item>
        <item>monospace</item>
        <item>sans-serif</item>
        <item>sans-serif-black</item>
        <item>sans-serif-condensed</item>
        <item>sans-serif-condensed-light</item>
        <item>sans-serif-light</item>
        <item>sans-serif-medium</item>
        <item>sans-serif-smallcaps</item>
        <item>sans-serif-thin</item>
        <item>serif</item>
        <item>serif-monospace</item>
    </string-array>
    <string name="sFontTV">%</string>
    <string name="sFAB">Go Up&#8230;</string>
</resources>
