<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sContainer"
    android:layoutDirection="ltr"
    tools:context=".Settings">

    <View
        android:id="@+id/sMotor"
        style="@style/Motor1" />

    <ImageView
        android:id="@+id/sShwBG"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/sToolbar"
        style="@style/Toolbar1"
        app:navigationIcon="@drawable/back_1_blue"
        app:subtitle="@string/tbSettings" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sBody"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/sToolbar"
        app:layout_constraintRight_toRightOf="@id/sToolbar"
        app:layout_constraintTop_toBottomOf="@id/sToolbar">

        <ScrollView
            android:id="@+id/sSV"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.85">

            <LinearLayout
                android:id="@+id/sLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="25dp"
                android:paddingBottom="35dp">

                <LinearLayout style="@style/sSect">

                    <LinearLayout style="@style/sSectTitle">

                        <ImageView style="@style/sSectTIV" />

                        <TextView
                            style="@style/sSectTTV"
                            android:text="@string/sWallpaper" />
                    </LinearLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout style="@style/sSectBody">

                        <LinearLayout
                            android:id="@+id/sWallpapers"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/sAddWallpaper"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/s_add_wp_bg"
                            app:layout_constraintTop_toBottomOf="@id/sWallpapers">

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@drawable/s_add_wp_stroke" />

                            <TextView
                                android:id="@+id/sAddWPTV"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:paddingStart="14dp"
                                android:text="@string/selectAPic"
                                android:textColor="@color/colorPrimary"
                                android:textSize="15sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toStartOf="@id/sAddWPIV"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <ImageView
                                android:id="@+id/sAddWPIV"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:adjustViewBounds="true"
                                android:padding="13dp"
                                android:src="@drawable/add_1_blue"
                                app:layout_constraintEnd_toEndOf="parent" />
                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>

                <LinearLayout style="@style/sSect">

                    <LinearLayout style="@style/sSectTitle">

                        <ImageView style="@style/sSectTIV" />

                        <TextView
                            style="@style/sSectTTV"
                            android:text="@string/sColorPrimaries" />
                    </LinearLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout style="@style/sSectBody">

                        <LinearLayout
                            android:id="@+id/sColourPrimaries"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <androidx.constraintlayout.widget.ConstraintLayout style="@style/sCPTitle">

                                <TextView
                                    style="@style/sCPTV"
                                    android:text="@string/sCP1"
                                    app:layout_constraintEnd_toStartOf="@id/sCP1DEF" />

                                <TextView
                                    android:id="@+id/sCP1DEF"
                                    style="@style/sCPDEF" />
                            </androidx.constraintlayout.widget.ConstraintLayout>

                            <LinearLayout style="@style/sCPLL">

                                <SeekBar style="@style/sCPSB" />

                                <SeekBar style="@style/sCPSB" />

                                <SeekBar style="@style/sCPSB" />
                            </LinearLayout>

                            <androidx.constraintlayout.widget.ConstraintLayout
                                style="@style/sCPTitle"
                                android:layout_marginTop="13dp">

                                <TextView
                                    style="@style/sCPTV"
                                    android:text="@string/sCP2"
                                    app:layout_constraintEnd_toStartOf="@id/sCP2DEF" />

                                <TextView
                                    android:id="@+id/sCP2DEF"
                                    style="@style/sCPDEF" />
                            </androidx.constraintlayout.widget.ConstraintLayout>

                            <LinearLayout style="@style/sCPLL">

                                <SeekBar style="@style/sCPSB" />

                                <SeekBar style="@style/sCPSB" />

                                <SeekBar style="@style/sCPSB" />
                            </LinearLayout>
                        </LinearLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>

                <LinearLayout style="@style/sSect">

                    <LinearLayout style="@style/sSectTitle">

                        <ImageView style="@style/sSectTIV" />

                        <TextView
                            style="@style/sSectTTV"
                            android:text="@string/sArrangement" />
                    </LinearLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout style="@style/sSectBody">

                        <LinearLayout
                            android:id="@+id/sArrangement"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            app:layout_constraintTop_toTopOf="parent">

                            <androidx.constraintlayout.widget.ConstraintLayout style="@style/sArngTR">

                                <TextView
                                    android:id="@+id/sArngFTV"
                                    style="@style/sArngTV"
                                    android:text="@string/sFArrangement" />

                                <Spinner
                                    android:id="@+id/sArngFSp"
                                    style="@style/sArngSp" />

                                <ImageView
                                    android:id="@+id/sArngFSw"
                                    style="@style/sArngSw"
                                    app:layout_constraintEnd_toStartOf="@id/sArngFSp" />

                                <ImageView
                                    style="@style/sArngSpMark"
                                    app:layout_constraintEnd_toEndOf="@id/sArngFSp"
                                    app:layout_constraintTop_toTopOf="@id/sArngFSp" />
                            </androidx.constraintlayout.widget.ConstraintLayout>

                            <androidx.constraintlayout.widget.ConstraintLayout
                                style="@style/sArngTR"
                                android:layout_marginTop="5dp">

                                <TextView
                                    android:id="@+id/sArngMTV"
                                    style="@style/sArngTV"
                                    android:text="@string/sMArrangement" />

                                <Spinner
                                    android:id="@+id/sArngMSp"
                                    style="@style/sArngSp" />

                                <ImageView
                                    android:id="@+id/sArngMSw"
                                    style="@style/sArngSw"
                                    app:layout_constraintEnd_toStartOf="@id/sArngMSp" />

                                <ImageView
                                    style="@style/sArngSpMark"
                                    app:layout_constraintEnd_toEndOf="@id/sArngMSp"
                                    app:layout_constraintTop_toTopOf="@id/sArngMSp" />
                            </androidx.constraintlayout.widget.ConstraintLayout>

                            <androidx.constraintlayout.widget.ConstraintLayout
                                style="@style/sArngTR"
                                android:layout_marginTop="5dp">

                                <TextView
                                    android:id="@+id/sArngPTV"
                                    style="@style/sArngTV"
                                    android:text="@string/sPArrangement" />

                                <Spinner
                                    android:id="@+id/sArngPSp"
                                    style="@style/sArngSp" />

                                <ImageView
                                    android:id="@+id/sArngPSw"
                                    style="@style/sArngSw"
                                    app:layout_constraintEnd_toStartOf="@id/sArngPSp" />

                                <ImageView
                                    style="@style/sArngSpMark"
                                    app:layout_constraintEnd_toEndOf="@id/sArngPSp"
                                    app:layout_constraintTop_toTopOf="@id/sArngPSp" />
                            </androidx.constraintlayout.widget.ConstraintLayout>
                        </LinearLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

                <LinearLayout style="@style/sSect">

                    <LinearLayout style="@style/sSectTitle">

                        <ImageView style="@style/sSectTIV" />

                        <TextView
                            style="@style/sSectTTV"
                            android:text="@string/sFont" />
                    </LinearLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout style="@style/sSectBody">

                        <Spinner
                            android:id="@+id/sFontSP"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/spinner_bg_2"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageView
                            style="@style/sArngSpMark"
                            app:layout_constraintEnd_toEndOf="@id/sFontSP"
                            app:layout_constraintTop_toTopOf="@id/sFontSP" />

                        <TextView
                            android:id="@+id/sFontTV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="3dp"
                            android:text="100%"
                            android:textColor="@color/colorPrimary"
                            android:textSize="15sp"
                            app:layout_constraintEnd_toEndOf="@id/sFontSB"
                            app:layout_constraintStart_toStartOf="@id/sFontSB"
                            app:layout_constraintTop_toBottomOf="@id/sFontSP" />

                        <SeekBar
                            android:id="@+id/sFontSB"
                            style="@style/Widget.AppCompat.SeekBar.Discrete"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:max="20"
                            android:progress="10"
                            app:layout_constraintTop_toBottomOf="@id/sFontTV" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/sFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:contentDescription="@string/sFAB"
            android:rotation="-90"
            android:src="@drawable/play_3_ntf"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sBGShower"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/sBGShowerBtnBG"
            app:layout_constraintBottom_toBottomOf="@id/sBGShowerClose"
            app:layout_constraintLeft_toLeftOf="@id/sBGShowerClose"
            app:layout_constraintRight_toRightOf="@id/sBGShowerClose"
            app:layout_constraintTop_toTopOf="@id/sBGShowerClose" />

        <ImageView
            android:id="@+id/sBGShowerClose"
            style="@style/sBGShowerBtn"
            android:padding="20dp"
            android:src="@drawable/close_2_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/sBGShowerBtnBG"
            app:layout_constraintBottom_toBottomOf="@id/sBGShowerDelete"
            app:layout_constraintLeft_toLeftOf="@id/sBGShowerDelete"
            app:layout_constraintRight_toRightOf="@id/sBGShowerDelete"
            app:layout_constraintTop_toTopOf="@id/sBGShowerDelete" />

        <ImageView
            android:id="@+id/sBGShowerDelete"
            style="@style/sBGShowerBtn"
            android:padding="15dp"
            android:src="@drawable/delete_1_white"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>